# Teleoperation-Real-to-Simulation-Brigde

./: .gitignore  README.md  dr_config.py  kill.sh  pyproject.toml  requirements.txt  world_config.py
src/so101_lite/: __init__.py  camera_utils.py  config.py  objects.py  observations.py  world.py  ycb_assets.py
src/so101_lite/dr/: replay.py  variations.py
src/so101_lite/envs/: __init__.py  base_env.py  chess_env.py  look_at_env.py  move_env.py  pick_and_place.py  pick_env.py  reach_env.py
src/so101_lite/teleop/: __init__.py  cli.py  dataset.py  follower.py  leader.py  recorder.py  scene_api.py  viewer.py
tests/: smoke_record.py
